# docs/swagger.json
@@ -11,9 +11,6 @@
   },
   "servers": [
     {
-      "url": "http://localhost:5050"
-    },
-    {
       "url": "https://waterapp-hfy2.onrender.com"
     }
   ],
@@ -456,6 +453,217 @@
           }
         }
       }
+    },
+    "/water": {
+      "post": {
+        "tags": [
+          "Water"
+        ],
+        "summary": "Post a water record",
+        "operationId": "postWater",
+        "description": "Adds a new note about user's water consumption with optional date and daily water norm.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "waterVolume": {
+                    "description": "Amount of water consumed, in milliliters.",
+                    "type": "number",
+                    "example": 400
+                  },
+                  "dailyNorm": {
+                    "description": "Daily rate of water in milliliters.",
+                    "type": "number",
+                    "example": 1000
+                  },
+                  "date": {
+                    "description": "Timestamp when the water was consumed. Format ISO 8601.",
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2024-09-17T12:00:00Z"
+                  }
+                },
+                "required": [
+                  "waterVolume"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Water consumption note added successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 201
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Water note updated successfully"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/water"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
+    },
+    "/water/{id}": {
+      "patch": {
+        "tags": [
+          "Water"
+        ],
+        "summary": "Patch a water record",
+        "operationId": "patchWaterNoteId",
+        "description": "Update a record of water intake. This endpoint requires the user to be logged in.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "671668d6292dd17c2bd2e0fc"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "dailyNorm": {
+                    "description": "daily rate of water in milliliters.",
+                    "type": "number",
+                    "example": 1000
+                  },
+                  "waterVolume": {
+                    "description": "Amount of water consumed, in milliliters.",
+                    "type": "number",
+                    "example": 400
+                  },
+                  "date": {
+                    "description": "Timestamp when the water was consumed. Format: ISO 8601.",
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2024-09-17T12:00:00Z"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Water note updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "required": [
+                    "status",
+                    "message",
+                    "data"
+                  ],
+                  "properties": {
+                    "status": {
+                      "type": "integer",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "Water note updated successfully"
+                    },
+                    "data": {
+                      "type": "object",
+                      "$ref": "#/components/schemas/water"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "$ref": "#/components/responses/401"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Water"
+        ],
+        "summary": "Delete a water record",
+        "operationId": "deleteWater",
+        "description": "Delete a water record. This endpoint requires the user to be logged in.",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "example": "671668d6292dd17c2bd2e0fc"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "Water note deleted successfully"
+          },
+          "401": {
+            "description": "Unauthorized error"
+          },
+          "404": {
+            "$ref": "#/components/responses/404auth"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -470,7 +678,6 @@
       "user": {
         "type": "object",
         "required": [
-          "name",
           "email",
           "password"
         ],
