# src/routers/water.js
@@ -1,22 +1,46 @@
-import express from "express";
+import express from 'express';
 
-import { updateWaterRate, addWaterNote, updateWaterNote, deleteWaterNote } from "../controllers/waters.js";
+import {
+  updateWaterRate,
+  addWaterNote,
+  updateWaterNote,
+  deleteWaterNote,
+} from '../controllers/waters.js';
 
-import authenticate from "../middlewares/authenticate.js";
+import authenticate from '../middlewares/authenticate.js';
 
-import { waterRateSchema, waterNotesSchema } from "../validation/waters.js";
+import { waterRateSchema, waterNotesSchema } from '../validation/waters.js';
 
-import controllerWrapper from "../utils/controllerWrapper.js";
-import validateBody from "../utils/validateBody.js";
+import controllerWrapper from '../utils/controllerWrapper.js';
+import validateBody from '../utils/validateBody.js';
 
 const waterRouter = express.Router();
 
-waterRouter.patch("/rate", authenticate, validateBody(waterRateSchema), controllerWrapper(updateWaterRate));
+waterRouter.patch(
+  '/rate',
+  authenticate,
+  validateBody(waterRateSchema),
+  controllerWrapper(updateWaterRate),
+);
 
-waterRouter.post("/", authenticate, validateBody(waterNotesSchema), controllerWrapper(addWaterNote));
+waterRouter.post(
+  '/',
+  authenticate,
+  validateBody(waterNotesSchema),
+  controllerWrapper(addWaterNote),
+);
 
-waterRouter.patch("/:waterNoteId", authenticate, validateBody(waterNotesSchema), controllerWrapper(updateWaterNote));
+waterRouter.patch(
+  '/:waterNoteId',
+  authenticate,
+  validateBody(waterNotesSchema),
+  controllerWrapper(updateWaterNote),
+);
 
-waterRouter.delete("/:waterNoteId", authenticate, controllerWrapper(deleteWaterNote));
+waterRouter.delete(
+  '/:waterNoteId',
+  authenticate,
+  controllerWrapper(deleteWaterNote),
+);
 
 export default waterRouter;
